Fixed this extra margin/padding bidness after adding the position fixed shim

--- a/www/static/css/stylus/main.styl
+++ b/www/static/css/stylus/main.styl
@@ -42,8 +42,8 @@ body, html
   position absolute
   left: 50%;
 .header-nav .graphic-wrapper > .accent
-  margin-left: -215px;
-  width 430px
+  margin-left: -160px;
+  width 320px
   height 49px
 .header-nav .logo
   position: absolute;
